added one sting in form

--- a/FlaskApp/templates/index.html
+++ b/FlaskApp/templates/index.html
@@ -13,6 +13,7 @@
 <center>
     <form method="POST">
         <input name="text">
+        <input name="text2">
         <input type="submit">
     </form>
 <!--<form action="http://localhost:5000/app.py" method="post" name="commentform"
